web/server/data/bash-logs/bash_2026-07-15T02-34-11_n20l.log
# bash log — 2026/7/15 10:34:11
# session: (none)
# exit: 1  duration: 63ms
# command:
python -c "import subprocess; r = subprocess.run(['where', 'gh'], capture_output=True, text=True); print(r.stdout or r.stderr)"



# stderr (110 chars):
  File "<string>", line 1
    "import
    ^
SyntaxError: unterminated string literal (detected at line 1)
